syntax = "proto3";

package proto;

message CcWisperMsg {
    bytes data = 1;
}

message CcWisperReq {
    bytes id = 1;
}